# fastapi-socialmedia

./: .env.example  .gitignore  README.md  alembic.ini  hello.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 73fc94f27c8f_add_author_foreign_key_to_post.py  8d32519b5960_create_user_table.py  95406cbe76b2_create_post_table.py  abdcd7f83712_create_vote_table.py
app/: config.py  database.py  main.py  models.py  schema.py  security.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: models.py  posts.py  users.py  votes.py
app/routers/: __init__.py  auth.py  main_router.py  posts.py  posts_orm.py  posts_sql.py  users.py  votes.py
