[project]
name = "fastapi-socialmedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "argon2-cffi>=23.1.0",
    "fastapi[all]>=0.115.6",
    "h11>=0.16.0",
    "orjson==3.11.7",
    "psycopg>=3.2.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "python-multipart==0.0.22",
    "sqlmodel>=0.0.22",
    "starlette>=0.49.1",
    "urllib3==2.6.3",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
