[project]
name = "fastapi-socialmedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "argon2-cffi>=23.1.0",
    "fastapi[all]>=0.115.6",
    "h11>=0.16.0",
    "idna>=3.18",
    "mako>=1.3.12",
    "orjson==3.11.7",
    "psycopg>=3.2.4",
    "pygments>=2.20.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.22",
    "starlette>=1.3.1",
    "ujson==5.13.0",
    "urllib3>=2.7.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
